# models/Policy.py
@@ -4,6 +4,7 @@ from datetime import date
 class Policy(BaseModel):
     id: str
     account_id: str
+    status: str
     product: str
     startDate: date
     endDate: date
@@ -11,6 +12,12 @@ class Policy(BaseModel):
     premium: float
     notes: str
 
+class Policy_Summary(BaseModel):
+    id: str
+    startDate: date
+    status: str
+    product: str
+
 class Policy_List(BaseModel):
     totalSize: int
-    records: list[Policy]
+    records: list[Policy_Summary]
